[gd_scene load_steps=8 format=3 uid="uid://dhlvypir2o1c0"]

[ext_resource type="Script" uid="uid://b07m4gxcdi1g8" path="res://player/player.gd" id="1_htxxl"]
[ext_resource type="Script" uid="uid://dgs3fkmyidagk" path="res://player/motion/angular_motion.gd" id="3_qel1b"]
[ext_resource type="PackedScene" uid="uid://clq04q7cckivp" path="res://player/visual/metaball/metaball.tscn" id="4_y6pit"]
[ext_resource type="Script" uid="uid://b6ck7dmofywkf" path="res://player/motion/Inertia.gd" id="5_vafl7"]
[ext_resource type="AudioStream" uid="uid://ia6t3w3rnxhr" path="res://assets/audio/in_use/water_in.wav" id="6_ypeom"]
[ext_resource type="AudioStream" uid="uid://cbm7arhsldbpg" path="res://assets/audio/in_use/30341__junggle__waterdrop24.wav" id="7_13j2x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ujkc"]
radius = 88.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_htxxl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4ujkc")

[node name="Motion" type="Node" parent="."]

[node name="Angular" type="Node" parent="Motion"]
script = ExtResource("3_qel1b")

[node name="Metaball" parent="." instance=ExtResource("4_y6pit")]

[node name="InertiaFollower" type="Node2D" parent="Metaball"]
script = ExtResource("5_vafl7")
f = 3.0
z = 0.4

[node name="InertiaFollower" type="Node2D" parent="Metaball/InertiaFollower"]
script = ExtResource("5_vafl7")
f = 3.0
z = 0.4

[node name="on_showing_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ypeom")

[node name="on_lost_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_13j2x")
